--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -83,7 +83,7 @@ ENV CARDANO_NODE_SOCKET_PATH="/root/node/db/node.socket"
 RUN mkdir -p ${HOME}/node/keys
 
 # Copy scripts
-COPY cardano-node-start.sh /root/.local/bin
+COPY cardano-node-run.sh /root/.local/bin
 COPY cardano-cli-*.sh /root/.local/bin/
 
 # Set executable permits
@@ -93,4 +93,4 @@ RUN /bin/bash -c "chmod +x /root/.local/bin/cardano-*.sh"
 ENV TESNET_NETWORK_MAGIC=1097911063
 
 # Run cardano-node at the startup
-CMD [ "/root/.local/bin/cardano-node-start.sh" ]
+CMD [ "/root/.local/bin/cardano-node-run.sh" ]
