--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -66,11 +66,11 @@ RUN cp $(find ${HOME}/cardano-node/dist-newstyle/build -type f -name "cardano-no
 # Get latest config files from IOHK github api
 RUN export URL_CONFIG_FILES=$(curl -s https://api.github.com/repos/input-output-hk/cardano-node/releases/latest | jq -r .body | grep 'Configuration files' | sed 's/\(- \[Configuration files\]\)//' | tr -d '()\r' | sed 's/\/index\.html//') && \
     echo $URL_CONFIG_FILES && \
-    wget -P ${HOME}/node $URL_CONFIG_FILES/testnet-config.json && \
-    wget -P ${HOME}/node $URL_CONFIG_FILES/testnet-byron-genesis.json && \
-    wget -P ${HOME}/node $URL_CONFIG_FILES/testnet-shelley-genesis.json && \
-    wget -P ${HOME}/node $URL_CONFIG_FILES/testnet-alonzo-genesis.json && \
-    wget -P ${HOME}/node $URL_CONFIG_FILES/testnet-topology.json
+    wget -P ${HOME}/node $URL_CONFIG_FILES/testnet-config.json \
+    $URL_CONFIG_FILES/testnet-byron-genesis.json \
+    $URL_CONFIG_FILES/testnet-shelley-genesis.json \
+    $URL_CONFIG_FILES/testnet-alonzo-genesis.json \
+    $URL_CONFIG_FILES/testnet-topology.json
 
 # Change config to save them in /root/node/log/node.log file instead of stdout
 RUN sed -i 's/StdoutSK/FileSK/' ${HOME}/node/testnet-config.json
